--- a/src/components/transaction-edit-row/transaction-edit-row.component.html
+++ b/src/components/transaction-edit-row/transaction-edit-row.component.html
@@ -30,12 +30,15 @@
               <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
             </svg>
           </button>
-          <button type="button" (click)="onCancel()" class="p-2 text-red-600 hover:bg-red-100 rounded-full transition-colors duration-150">
-            <span class="sr-only">Cancel</span>
-            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-            </svg>
-          </button>
+          <!-- Cancel button only shown when editing (not when adding new) -->
+          @if (initialState()) {
+            <button type="button" (click)="onCancel()" class="p-2 text-red-600 hover:bg-red-100 rounded-full transition-colors duration-150">
+              <span class="sr-only">Cancel</span>
+              <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
+              </svg>
+            </button>
+          }
         </div>
       </div>
       
