--- a/src/components/transaction-list/transaction-list.component.html
+++ b/src/components/transaction-list/transaction-list.component.html
@@ -41,7 +41,7 @@
           (cancel)="cancelEdit()">
         </app-transaction-edit-row>
       } @else {
-        <li class="group p-3 hover:bg-gray-50 transition-colors duration-150 rounded relative">
+        <li class="group py-3 hover:bg-gray-50 transition-colors duration-150 rounded relative">
           <div class="flex items-start gap-3">
             <!-- Left: Icon -->
             <div class="flex-shrink-0">
